--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -5,22 +5,22 @@
 
 .options {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    align-items: stretch;
    overflow: hidden;
-   min-width: 600px;
-   max-width: 900px;
-   width: calc(100% - 100px);
-   height: 400px;
+   min-height: 600px;
+   max-height: 900px;
+   height: calc(100% - 100px);
+   width: 400px;
 }
 
 .options .option {
    position: relative;
    overflow: hidden;
-   min-width: 60px;
+   min-height: 60px;
    margin: 10px;
    background: var(--optionBackground);
-   background-size: auto 120%;
+   background-size: cover;
    background-position: center;
    cursor: pointer;
    transition: .5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
