--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -11,7 +11,7 @@
    min-height: 600px;
    max-height: 900px;
    height: calc(100% - 100px);
-   width: 400px;
+   width: 100%;
 }
 
 .options .option {
@@ -32,7 +32,6 @@
    max-width: 600px;
    margin: 0;
    border-radius: 40px;
-   background-size: auto 100%;
 }
 
 .options .option.active .shadow {
