--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -35,7 +35,8 @@
 }
 
 .options .option.active .shadow {
-   box-shadow: inset 0 -120px 120px -120px black, inset 0 -120px 120px -100px black;
+   mix-blend-mode: multiply;
+   background: var(--cor);
 }
 
 .options .option.active .label {
@@ -63,7 +64,9 @@
    bottom: 0;
    left: 0;
    right: 0;
-   height: 120px;
+   height: 100%;
+   mix-blend-mode: multiply;
+   background: #1c1c1c;
    transition: .5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
 }
 
