--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -83,6 +83,19 @@
    border-radius: 100%;
    background-color: white;
    color: var(--defaultBackground);
+   font-weight: 900;
+   font-family: "Font Awesome 5 Free";
+   -moz-osx-font-smoothing: grayscale;
+   -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.options .option .label .icon.raca:before {
+   content: "\f471";
 }
 
 .options .option .label .info {
