--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -108,7 +108,7 @@
 }
 
 .options .option .label .icon.combatente:before {
-   content: "\e533";
+   content: "\f0c0";
 }
 
 .options .option .label .icon.he:before {
