--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -245,7 +245,7 @@
   height: 180px;
   border-radius: 100%;
   background-color: #666;
-  background-image: url();
+  background-image: var(--icon);
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0 0 -20px 30px;
