--- a/styles/ficha_ssk.css
+++ b/styles/ficha_ssk.css
@@ -188,6 +188,7 @@
   box-shadow: 1px 2px #938e8e;
   border-radius: 8px;
   opacity: 0.9;
+  overflow-y: auto;
 }
 
 .options .option.active .description .nivel {
